# Computer_algebra_system

./: .gitignore  CMakeLists.txt  IntegerNumber.cpp  IntegerNumber.h  NaturalNumber.cpp  NaturalNumber.h  Polynomial.cpp  Polynomial.h  RationalNumber.cpp  RationalNumber.h  main.cpp  newPolynomial.cpp  readme.md
Validator/: Validator.cpp  Validator.h
Validator/Utils/: Lexer.cpp  Lexer.h  Monom.h  Parser.cpp  Parser.h  Token.cpp  Token.h
